Fix alignment of buttons

--- a/style.css
+++ b/style.css
@@ -55,9 +55,7 @@ body{
 
 .button-wrapper{
     display: flex;
-    height: 250px;
-    width: auto;
-    padding: 10px;
+    justify-content: space-around;
     gap: 10px;
     margin-top: 10px;
 }
